--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.bg {
+  height: 100%;
+  background-image: linear-gradient(#334d50, #cbcaa5);
   min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.list-box {
+  width: 450px;
+  box-sizing: border-box;
+  padding: 30px 50px;
+  background-color: white;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+.input-box {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-around;
+}
+.sumbit-bt {
+  background: none;
+  border: 1px solid #334d50;
+  padding: 5px;
+  border-radius: 5px;
+  transition: 0.2s all;
+  cursor: pointer;
+}
+.sumbit-bt:hover {
+  background: #334d50;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+input {
+  padding: 10px 50px;
+  box-sizing: border-box;
 }
+/* list */
+ul {
+  list-style: none;
+}
+ul li {
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+  box-sizing: border-box;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  display: flex;
+  justify-content: space-between;
+}
+ul li p {
+  font-size: 20px;
+}
+.buttons {
+  display: flex;
+}
+.buttons button {
+  padding: 10px 15px;
+  background: #eee;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 0 5px;
+}
+.success:hover {
+  color: white;
+  background: green;
+}
+.close:hover {
+  color: white;
+  background: red;
 }
