--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+body {
+  position: relative;
+}
 .bg {
   height: 100%;
   background-image: linear-gradient(#334d50, #cbcaa5);
@@ -74,4 +77,36 @@ ul li p {
 .buttons button:last-child:hover {
   color: white;
   background: red;
+}
+
+.modal-bg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: none;
+}
+.white-box {
+  width: 400px;
+  height: 300px;
+  background-color: white;
+  margin: 30vh auto;
+  border-radius: 10px;
+  padding: 50px;
+  box-sizing: border-box;
+}
+.white-box > * {
+  width: 300px;
+  margin: 20px 0;
+}
+.white-box .submit {
+  border: none;
+  padding: 8px;
+  border-radius: 10px;
+  background-color: #334d50;
+  cursor: pointer;
+  color: white;
 }
